Update SecurityConfig, get list